updated readme plan

--- a/samples/C++/readme
+++ b/samples/C++/readme
@@ -6,3 +6,21 @@ or invoke the included Makefile. Compilation with other tools should be similar.
 
 This ./dropblox_ai binary satisfies the competition spec - simply copy it the
 directory with your client to use it!
+
+Weighted System
+
+Positive
+Complete lines
+filling holes
+producing flat top
+
+
+Negative
+height
+producing closed holes
+producing open holes
+Comparison with future
+
+Check all the potential locations
+Compile a list of all valid locations, generate score for all of them
+From the top, try to generate a list of moves that place the block there.	
